--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bright140 Pages</title>
 </head>
 <body>
-    <h1>Phan su bin</h1>
+    <h2>Chào mấy bro</h2>
+    <h3>Phan su bin</h3>
+    <p>I like Code</p>
 </body>
 </html>
