Add content for pages

--- a/index.html
+++ b/index.html
@@ -3,12 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bright140 Pages</title>
+    <title>Bright140</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Bright.jpeg">
+    <script src="index.js"></script>
 </head>
 <body>
-    <h2>Chào mấy bro</h2>
-    <h3>Phan su bin</h3>
-    <p>I like Code</p>
+    <h2>Chào mấy bro (tham quan my Github ở đây: <a href="https://github.com/Bright140">Bright140</a>)</h2>
+    <h3>
+        I'm <span id="name" onmouseover="changer()" onmouseout="changer0()">Phan Su Bin</span>, Currently I am studying at <span id="school">Hue University of Sciences</span>, I really <span id="like">love</span> programing and Im <span class="title">trying to be better</span>
+    </h3>
+    <span class="UTC">The Time: </span>
+    <p id="minute"></p>
+    <p id="content">This is the board I made myself:</p>
+    <div id="container">
+        <div id="text1">
+            <p id="Wind">Kaze</p>
+            <p id="Wt1"></p>
+            <img id="PW1" src="./images/Element_Anemo.webp" alt="">
+        </div>
+        <div id="text2">
+            <p id="Fire">Hi</p>
+            <p id="Ft2"></p>
+            <img id="PF2" src="./images/Element_Pyro.webp" alt="">
+        </div>
+        <div id="text3">
+            <p id="Synthetic">Synthetic (Vô Hạn)</p>
+            <p id="St3">0 Infinity Element 0</p>
+        </div>
+        <div id="text6">
+            <p id="Earth">Tochi</p>
+            <p id="Et6"></p>
+            <img id="PE6" src="./images/Element_Geo.webp" alt="">
+        </div>
+        <div id="text7">
+            <p id="Water">Mizu</p>
+            <p id="Wt7"></p>
+            <img id="PW7" src="./images/Element_Hydro.webp" alt="">
+        </div>
+    </div>
 </body>
 </html>
