add and update content for pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bright140</title>
+    <title>Phan Su Bin | Bright140</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Bright.jpeg">
     <script src="index.js"></script>
@@ -15,7 +15,7 @@
     </h3>
     <span class="UTC">The Time: </span>
     <p id="minute"></p>
-    <p id="content">This is the board I made myself:</p>
+    <p id="content">These are things I made myself:</p>
     <div id="container">
         <div id="text1">
             <p id="Wind">Kaze</p>
@@ -41,6 +41,31 @@
             <p id="Wt7"></p>
             <img id="PW7" src="./images/Element_Hydro.webp" alt="">
         </div>
+    </div>
+    <div class="container-0">
+        <button id="choose" onclick="roll()">Nhấn vào đây để random</button>
+        <div class="spcb">
+            <div id="sword">
+                <p id="S1"></p>
+            </div>
+            <div id="polearm">
+                <p id="P2"></p>
+            </div>
+            <div id="claymore">
+                <p id="C3"></p>
+            </div>
+            <div id="catalyst">
+                <p id="C4"></p>
+            </div>
+            <div id="bow">
+                <p id="B5"></p>
+            </div>
+        </div>
+        <div id="content-roll">
+            <p id="about"></p>
+        </div>
+        <p class="title-0">Spin results:</p>
+        <p id="want"></p>
     </div>
 </body>
 </html>
