add profile image for page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <span class="UTC">The Time: </span>
     <p id="minute"></p>
     <p id="content">These are things I made myself:</p>
+    <div class="profile">
+        <img src="Bright.jpeg" alt="">
+    </div>
     <div id="container">
         <div id="text1">
             <p id="Wind">Kaze</p>
