--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>
         I'm <span id="name" onmouseover="changer()" onmouseout="changer0()">Phan Su Bin</span>, Currently I am studying at <span id="school">Hue University of Sciences</span>, I really <span id="like">love</span> programing and Im <span class="title">trying to be better</span>
     </h3>
-    <span class="UTC">The Time: </span>
+    <span class="UTC">Clock: </span>
     <p id="minute"></p>
     <p id="content">These are things I made myself:</p>
     <div class="profile">
