update content for pages

--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
 <body>
     <h2>Chào mấy bro (tham quan my Github ở đây: <a href="https://github.com/Bright140">Bright140</a>)</h2>
     <h3>
-        I'm <span id="name" onmouseover="changer()" onmouseout="changer0()">Phan Su Bin</span>, Currently I am studying at <span id="school">Hue University of Sciences</span>, I really <span id="like">love</span> programing and Im <span class="title">trying to be better</span>
+        I'm <span id="name" onmouseover="changer()" onmouseout="changer0()">Phan Su Bin</span>, 
+        Currently I am studying at <span id="school">Hue University of Sciences</span>, 
+        I really <span id="like" onmouseover="changer1()" onmouseout="changer2()">love</span> programming and Im <span class="title">trying to be better</span>
     </h3>
     <span class="UTC">Clock: </span>
     <p id="minute"></p>
     <p id="content">These are things I made myself:</p>
     <div class="profile">
         <img src="Bright.jpeg" alt="">
+    </div>
+    <div class="title-profile">
+        <p id="title-pro"></p>
     </div>
     <div id="container">
         <div id="text1">
@@ -67,7 +72,7 @@
         <div id="content-roll">
             <p id="about"></p>
         </div>
-        <p class="title-0">Spin results:</p>
+        <p class="title-0">Results:</p>
         <p id="want"></p>
     </div>
 </body>
