update content for pages

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div class="title-profile">
         <p id="title-pro"></p>
     </div>
+    <p id="title-song"><span id="so1">My F</span><span id="so2">avor</span><span id="so3">ite S</span><span id="so4">ong</span></p>
     <div class="music">
-        <p><span id="so1">My F</span><span id="so2">avor</span><span id="so3">ite S</span><span id="so4">ong</span></p>
         <div>
             <div>
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2uiQo0DIcriQKVm5ivXuDO?utm_source=generator" width="500" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
