--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         </div>
     </div>
     <div class="video-limitid">
-        <video id="video-content" src="./video/To Be Hero X.mp4" controls onended="show()"></video>
+        <video id="video-content" controls onended="show()">
+            <source src="./video/To Be Hero X.mp4" type="video/mp4">
+        </video>
         <p id="title-video">'To Be Hero X' Preview | Source: <a href="https://www.youtube.com/@MadeByBilibili">bilibili</a> x <a href="https://www.youtube.com/@aniplex">Aniplex</a></p>
     </div>
     <div id="container">
@@ -97,6 +99,6 @@
         <p class="title-0">Results:</p>
         <p id="want"></p>
     </div>
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
 </body>
 </html>
