update content for pages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="video-limitid">
-        <video id="video-content" controls onended="show()">
+        <video id="video-content" controls>
             <source src="./video/To Be Hero X.mp4" type="video/mp4">
         </video>
         <p id="title-video">'To Be Hero X' Preview | Source: <a href="https://www.youtube.com/@MadeByBilibili">bilibili</a> x <a href="https://www.youtube.com/@aniplex">Aniplex</a></p>
