update content for pages

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <video id="video-content" controls>
             <source src="./video/To Be Hero X.mp4" type="video/mp4">
         </video>
-        <p id="title-video">'To Be Hero X' Preview | Source: <a href="https://www.youtube.com/@MadeByBilibili">bilibili</a> x <a href="https://www.youtube.com/@aniplex">Aniplex</a></p>
+        <p id="title-video">' <span>To Be Hero X</span> ' Preview | Source: <a href="https://www.youtube.com/@MadeByBilibili">bilibili</a> x <a href="https://www.youtube.com/@aniplex">Aniplex</a></p>
     </div>
     <div id="container">
         <div id="text1">
