--- a/index.html
+++ b/index.html
@@ -100,51 +100,52 @@
         <p id="want"></p>
     </div>
     <div class="container-form">
-        <p>Input Infomation Form (are testing)</p>
+        <p>Input Infomation Form (demo)</p>
         <form>
             <div id="l-1">
                 <label for="fname">Họ:</label>
-                <input type="text" id="fname" name="fname">
+                <input type="text" id="fname" oninput="down('fname','green')" onchange="down('fname','red')" onmousedown="down('fname','blue')" name="fname" required placeholder="Nhập vào đây" pattern="^*[A-Za-z\s]$" title="Vui lòng nhập đúng định dạng 'Họ'" autocomplete="on">
             </div>
             <div id="l-2">
                 <label for="lname">Tên:</label>
-                <input type="text" id="lname" name="lname">
+                <input type="text" id="lname" oninput="down('lname','green')" onchange="down('lname','red')" onmousedown="down('lname','blue')" name="lname" required placeholder="Nhập vào đây" pattern="^*[A-Za-z\s]$" title="Vui lòng nhập đúng định dạng 'Tên'" autocomplete="on">
             </div>
             <div id="l-3"> 
-                <label for="birtday">Ngày sinh:</label>
-                <input type="date" id="birtday" name="birtday">
+                <label for="birtday">Birthday:</label>
+                <input type="date" id="birtday" name="birtday" required title="Trường nhập này là bắt buộc" autocomplete="on">
             </div>
             <div id="l-4">
-                <label for="sex">Giới tính:</label>
-                <div>
-                    <div id="lt-1">
-                        <input type="radio" id="sex" name="sex" value="man">
-                        <span>Nam</span>
-                    </div>
-                    <div id="lt-2">
-                        <input type="radio" id="sex" name="sex" value="female">
-                        <span>Nữ</span>
-                    </div>
-                    <div id="lt-3">
-                        <input type="radio" id="sex" name="sex" value="threemanle">
-                        <span>Đồng tính</span>
-                    </div>
-                </div>
+                <label for="sex"><span class="l-t1">Giới</span> <span class="l-t2">tính</span>:</label>
+                <select name="sex" id="sex" required>
+                    <option id="op-1" value="man">Nam</option>
+                    <option id="op-2" value="female">Nữ</option>
+                    <option id="op-3" value="faman">Đồng tính</option>
+                </select>
             </div>
             <div id="l-5">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
+                <input type="email" id="email" oninput="down('email','green')" onchange="down('email','red')" onmousedown="down('email','blue')" name="email" required placeholder="Nhập vào đây" pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" title="Vui lòng nhập đúng định dạng 'Email'" autocomplete="on">
+            </div>
+            <div id="l-9">
+                <label for="color"><span id="favecolor">Favorite Color</span>:</label>
+                <input type="color" id="color">
             </div>
             <div id="l-6">
                 <label for="address">Address:</label>
-                <input type="text" id="address" name="address">
+                <input type="text" id="address" oninput="down('address','green')" onchange="down('address','red')" onmousedown="down('address','blue')" name="address" placeholder="Nhập vào đây" autocomplete="on">
             </div>
             <div id="l-7">
-                <input type="submit" value="Gửi">
+                <input type="submit" value="Gửi" onmousedown="doup('l-7','red','rgb(145, 0, 0)')" onmouseup="doup('l-7','green','rgb(210, 210, 210)')" onmouseover="hovere('l-7','greenyellow')" onmouseout="hovere('l-7','rgb(210, 210, 210)')">
+            </div>
+            <div id="l-10">
+                <input type="reset" value="Đặt lại" onmousedown="doup('l-10','green','greenyellow')" onmouseup="doup('l-10','red','rgb(210, 210, 210)')" onmouseover="hovere('l-10','rgb(145, 0, 0)')" onmouseout="hovere('l-10','rgb(210, 210, 210)')">
             </div>
             <div id="l-8">
-                <div></div>
-                <input type="file" name="avatar" multiple>
+                <div>
+                    <img id="avatar-form" src="" alt="">
+                </div>
+                <label for="avatar">| <span>Avatar</span> |</label>
+                <input type="file" name="avatar" id="avatar" accept="image/*" onchange="avatarfo()">
             </div>
         </form>
     </div>
