update content for pages

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
             <div id="l-9">
                 <label for="color"><span id="favecolor">Favorite Color</span>:</label>
-                <input type="color" id="color">
+                <input type="color" id="color" name="color">
             </div>
             <div id="l-6">
                 <label for="address">Address:</label>
