update form for pages

--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
         <p id="want"></p>
     </div>
     <div class="container-form">
-        <p>Input Infomation Form (demo)</p>
-        <form>
+        <p>Input Infomation Form</p>
+        <form action="https://formsubmit.co/subinphan.1110@gmail.com" method="post">
             <div id="l-1">
                 <label for="fname">Họ:</label>
-                <input type="text" id="fname" oninput="down('fname','green')" onchange="down('fname','red')" onmousedown="down('fname','blue')" name="fname" required placeholder="Nhập vào đây" pattern="^*[A-Za-z\s]$" title="Vui lòng nhập đúng định dạng 'Họ'" autocomplete="on">
+                <input type="text" id="fname" name="fname" oninput="down('fname','green')" onchange="down('fname','red')" onmousedown="down('fname','blue')" required placeholder="Nhập vào đây" pattern="^*[A-Za-z\s]$" title="Vui lòng nhập đúng định dạng 'Họ'" autocomplete="on">
             </div>
             <div id="l-2">
                 <label for="lname">Tên:</label>
-                <input type="text" id="lname" oninput="down('lname','green')" onchange="down('lname','red')" onmousedown="down('lname','blue')" name="lname" required placeholder="Nhập vào đây" pattern="^*[A-Za-z\s]$" title="Vui lòng nhập đúng định dạng 'Tên'" autocomplete="on">
+                <input type="text" id="lname" name="lname" oninput="down('lname','green')" onchange="down('lname','red')" onmousedown="down('lname','blue')" required placeholder="Nhập vào đây" pattern="^*[A-Za-z\s]$" title="Vui lòng nhập đúng định dạng 'Tên'" autocomplete="on">
             </div>
             <div id="l-3"> 
                 <label for="birtday">Birthday:</label>
@@ -124,7 +124,7 @@
             </div>
             <div id="l-5">
                 <label for="email">Email:</label>
-                <input type="email" id="email" oninput="down('email','green')" onchange="down('email','red')" onmousedown="down('email','blue')" name="email" required placeholder="Nhập vào đây" pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" title="Vui lòng nhập đúng định dạng 'Email'" autocomplete="on">
+                <input type="email" id="email" name="email" oninput="down('email','green')" onchange="down('email','red')" onmousedown="down('email','blue')" required placeholder="Nhập vào đây" pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" title="Vui lòng nhập đúng định dạng 'Email'" autocomplete="on">
             </div>
             <div id="l-9">
                 <label for="color"><span id="favecolor">Favorite Color</span>:</label>
@@ -132,7 +132,7 @@
             </div>
             <div id="l-6">
                 <label for="address">Address:</label>
-                <input type="text" id="address" oninput="down('address','green')" onchange="down('address','red')" onmousedown="down('address','blue')" name="address" placeholder="Nhập vào đây" autocomplete="on">
+                <input type="text" id="address" name="address" oninput="down('address','green')" onchange="down('address','red')" onmousedown="down('address','blue')" placeholder="Nhập vào đây" autocomplete="on">
             </div>
             <div id="l-7">
                 <input type="submit" value="Gửi" onmousedown="doup('l-7','red','rgb(145, 0, 0)')" onmouseup="doup('l-7','green','rgb(210, 210, 210)')" onmouseover="hovere('l-7','greenyellow')" onmouseout="hovere('l-7','rgb(210, 210, 210)')">
