--- a/index.html
+++ b/index.html
@@ -149,6 +149,6 @@
             </div>
         </form>
     </div>
-    <script src="index.js" defer></script>
+    <script src="logic.js" defer></script>
 </body>
 </html>
