--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h2>Chào mấy bro (tham quan my Github ở đây: <a href="https://github.com/Bright140" target="_blank">Bright140</a>)</h2>
     <h3>
-        I'm <span id="name" onmouseover="changer()" onmouseout="changer0()">Phan Su Bin</span>, 
+        I'm <span id="name">Phan Su Bin</span>, 
         Currently I am studying at <span id="school">Hue University of Sciences</span>, 
         I really <span id="like" onmouseover="changer1()" onmouseout="changer2()">love</span> programming and Im <span class="title">trying to be better</span>
     </h3>
