update link of video

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="Bright140.jpeg">
 </head>
 <body>
-    <h2>Chào mấy bro (tham quan my Github ở đây: <a href="https://github.com/Bright140" target="_blank">Bright140</a>)</h2>
+    <h2>Chào mấy bro (tham quan my Github ở đây: <a id="github" href="https://github.com/Bright140" target="_blank">Bright140</a>)</h2>
     <h3>
         I'm <span id="name">Phan Su Bin</span>, 
         Currently I am studying at <span id="school">Hue University of Sciences</span>, 
@@ -46,7 +46,7 @@
         <video id="video-content" controls>
             <source src="./video/To Be Hero X.mp4" type="video/mp4">
         </video>
-        <p id="title-video">" <span>To Be Hero X</span> " Preview | Source: <a href="https://www.youtube.com/@MadeByBilibili" target="_blank">bilibili</a> x <a href="https://www.youtube.com/@aniplex" target="_blank">Aniplex</a></p>
+        <p id="title-video">" <span>To Be Hero X</span> " Preview | Source: <a id="bilibili" href="https://www.youtube.com/@MadeByBilibili" target="_blank">bilibili</a> x <a id="aniplex" href="https://www.youtube.com/@aniplex" target="_blank">Aniplex</a></p>
     </div>
     <div id="container">
         <div id="text1">
@@ -145,7 +145,7 @@
                     <img id="avatar-form" src="" alt="">
                 </div>
                 <label for="avatar">| <span>Avatar</span> |</label>
-                <input type="file" name="avatar" id="avatar" accept="image/*" onchange="avatarfo()">
+                <input type="file" name="avatar" id="avatar" accept="image/*" onchange="avatarfo()" title="Chọn ảnh đại diện">
             </div>
         </form>
     </div>
