update title for pages

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <img id="PW7" src="./images/Element_Hydro.webp" alt="">
             </div>
         </div>
-        <p>Table Element</p>
+        <p>Element Table</p>
     </div>
     <div class="container-0">
         <button id="choose" onclick="roll()">Nhấn vào đây để random</button>
