add tooltip of avatar label

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                 <label id="avatar-label" for="avatar" onmousedown="downup('avatar-label','white','black')" onmouseup="downup('avatar-label','black','white')" onmouseover="hovere('avatar-label','greenyellow')" onmouseout="hovere('avatar-label','black')">
                     Chọn ảnh
                     <input type="file" name="avatar" id="avatar" accept="image/*" onchange="avatarfo()" title="Chọn ảnh đại diện">
+                    <span>Khuyến nghị: Nên dùng hình ảnh 150px X 150px</span>
                 </label>
             </div>
         </form>
