--- a/index.html
+++ b/index.html
@@ -114,6 +114,35 @@
         <p class="title-0">Results:</p>
         <p id="want"></p>
     </div>
+    <div class="container-heart">
+        <div>
+            <div id="heart-b">
+                <div id="b1"></div>
+                <div id="b2"></div>
+                <div id="b3"></div>
+                <div id="b4"></div>
+                <div id="b5"></div>
+                <div id="b6"></div>
+                <div id="b7"></div>
+                <div id="b8"></div>
+                <div id="b9"></div>
+                <div id="b10"></div>
+            </div>
+            <div id="heart-r">
+                <div id="r1"></div>
+                <div id="r2"></div>
+                <div id="r3"></div>
+                <div id="r4"></div>
+                <div id="r5"></div>
+                <div id="r6"></div>
+                <div id="r7"></div>
+                <div id="r8"></div>
+                <div id="r9"></div>
+                <div id="r10"></div>
+            </div>
+        </div>
+        <p>Heart</p>
+    </div>
     <div class="container-form">
         <p>Input Infomation Form</p>
         <form action="https://formsubmit.co/subinphan.1110@gmail.com" method="post" onreset="respan()">
