--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phan Su Bin | Bright140</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="Bright140.jpeg">
+    <link rel="icon" href="icon/Bright.jpeg">
 </head>
 <body>
-    <h2>Chào mấy bro (tham quan my Github ở đây: <a id="github" href="https://github.com/Bright140" target="_blank">Bright140</a>)</h2>
+    <h2>Chào mấy bro (My Github: <a id="github" href="https://github.com/Bright140" target="_blank">Bright140</a>)</h2>
     <h3>
         I'm <span id="name">Phan Su Bin</span>, 
         Currently I am studying at <span id="school">Hue University of Sciences</span>, 
-        I really <span id="like" onmouseover="changer1()" onmouseout="changer2()">love</span> programming and Im <span class="title">trying to be better</span>
+        I really <span id="like" onmouseover="changer1()" onmouseout="changer2()">love</span> coding and Im <span class="title">trying to be better</span>
     </h3>
     <div class="container-calendar">
         <div class="calendar">
