update link for pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="icon" href="icon/Bright.jpeg">
 </head>
 <body>
-    <h2>Chào mấy bro (My Github: <a id="github" href="https://github.com/Bright140" target="_blank">Bright140</a>)</h2>
+    <h2>Chào mấy bro</h2>
+    <a id="github" href="https://github.com/Bright140" target="_blank">
+        <img src="./icon/github-mark/github-mark.png" alt="">
+    </a>
     <h3>
         I'm <span id="name">Phan Su Bin</span>, 
         Currently I am studying at <span id="school">Hue University of Sciences</span>, 
