update and add swicth

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 </head>
 <body>
     <h2>Chào mấy bro</h2>
-    <a id="github" href="https://github.com/Bright140" target="_blank">
-        <img src="./icon/github-mark/github-mark.png" alt="">
-    </a>
+    <div class="container-icon">
+        <a id="github" href="https://github.com/Bright140" target="_blank">
+            <img src="./icon/github-mark/github-mark.png" alt="">
+        </a>
+        <a id="dark" href="">
+            <img src="/icon/mode/dark.png" alt="">
+        </a>
+    </div>
     <h3>
         I'm <span id="name">Phan Su Bin</span>, 
         Currently I am studying at <span id="school">Hue University of Sciences</span>, 
