update content for pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a id="github" href="https://github.com/Bright140" target="_blank">
             <img src="./icon/github-mark/github-mark.png" alt="">
         </a>
-        <a id="dark" href="">
+        <a id="dark" href="/dark mode/dark_pages.html">
             <img src="/icon/mode/dark.png" alt="">
         </a>
     </div>
@@ -187,10 +187,10 @@
                 <input type="text" id="address" name="address" oninput="down('address','green')" onchange="down('address','red')" onmousedown="down('address','blue')" placeholder="Nhập vào đây" autocomplete="on">
             </div>
             <div id="l-7">
-                <input type="submit" value="Gửi" onmousedown="doup('l-7','red','rgb(145, 0, 0)')" onmouseup="doup('l-7','green','rgb(210, 210, 210)')" onmouseover="hovere('l-7','greenyellow')" onmouseout="hovere('l-7','rgb(170, 170, 170)')">
+                <input type="submit" value="Gửi" onmousedown="doup('l-7','red','rgb(145, 0, 0)')" onmouseup="doup('l-7','green','rgb(170, 170, 170)')" onmouseover="hovere('l-7','greenyellow')" onmouseout="hovere('l-7','rgb(170, 170, 170)')">
             </div>
             <div id="l-10">
-                <input type="reset" value="Đặt lại" onmousedown="doup('l-10','green','greenyellow')" onmouseup="doup('l-10','red','rgb(210, 210, 210)')" onmouseover="hovere('l-10','rgb(145, 0, 0)')" onmouseout="hovere('l-10','rgb(170, 170, 170)')">
+                <input type="reset" value="Đặt lại" onmousedown="doup('l-10','green','greenyellow')" onmouseup="doup('l-10','red','rgb(170, 170, 170)')" onmouseover="hovere('l-10','rgb(145, 0, 0)')" onmouseout="hovere('l-10','rgb(170, 170, 170)')">
             </div>
             <div id="l-8">
                 <div>
