--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
             <div id="l-9">
                 <label for="color"><span id="favecolor">Favorite Color</span>:</label>
-                <input type="color" id="color" name="color">
+                <input type="color" id="color" name="color" title="Chọn màu yêu thích">
             </div>
             <div id="l-6">
                 <label for="address">Address:</label>
