add cubic for pages

--- a/dark mode/dark_pages.html
+++ b/dark mode/dark_pages.html
@@ -151,6 +151,14 @@
         </div>
         <p>Heart</p>
     </div>
+    <div class="container-sqare">
+        <div id="sqare">
+            <div id="sq1"></div>
+            <div id="sq2"></div>
+            <div id="sq3"></div>
+        </div>
+        <p><span id="ts1">Magic</span> <span id="ts2">Squ</span><span id="ts3">are</span></p>
+    </div>
     <div class="container-form">
         <p>Input Infomation Form</p>
         <form action="https://formsubmit.co/subinphan.1110@gmail.com" method="post" onreset="respan()">
