update content for pages

--- a/dark mode/dark_pages.html
+++ b/dark mode/dark_pages.html
@@ -95,7 +95,9 @@
                 <img id="PW7" src="/images/Element_Hydro.webp" alt="">
             </div>
         </div>
-        <p>Element Table</p>
+        <div id="element-text">
+            <p>Element Table</p>
+        </div>
     </div>
     <div class="container-0">
         <button id="choose" onclick="roll()">Nhấn vào đây để random</button>
