update content for pages

--- a/dark mode/dark_pages.html
+++ b/dark mode/dark_pages.html
@@ -151,7 +151,9 @@
                 <div id="r10"></div>
             </div>
         </div>
-        <p>Heart</p>
+        <div id="heart-text">
+            <p>Heart</p>
+        </div>
     </div>
     <div class="container-sqare">
         <div id="sqare">
@@ -159,7 +161,9 @@
             <div id="sq2"></div>
             <div id="sq3"></div>
         </div>
-        <p><span id="ts1">Magic</span> <span id="ts2">Squ</span><span id="ts3">are</span></p>
+        <div id="sqare-text">
+            <p><span id="ts1">Magic</span> <span id="ts2">Squ</span><span id="ts3">are</span></p>
+        </div>
     </div>
     <div class="container-form">
         <p>Input Infomation Form</p>
