update atribute for pages

--- a/dark mode/dark_pages.html
+++ b/dark mode/dark_pages.html
@@ -38,7 +38,7 @@
     </div>
     <p id="content">These are things I made myself:</p>
     <div class="profile">
-        <img src="/Ragna.gif" alt="">
+        <img src="/images/Ragna.gif" alt="">
     </div>
     <div class="title-profile">
         <p id="title-pro"></p>
