update content for pages

--- a/dark mode/dark_pages.html
+++ b/dark mode/dark_pages.html
@@ -17,7 +17,7 @@
             <img src="/icon/mode/light.png" alt="">
         </a>
     </div>
-    <h3>
+    <h3 class="about-me">
         I'm <span id="name">Phan Su Bin</span>, 
         Currently I am studying at <span id="school">Hue University of Sciences</span>, 
         I really <span id="like" onmouseover="changer1()" onmouseout="changer2()">love</span> coding and Im <span class="title">trying to be better</span>
@@ -151,9 +151,7 @@
                 <div id="r10"></div>
             </div>
         </div>
-        <div id="heart-text">
-            <p>Heart</p>
-        </div>
+        <p>Heart</p>
     </div>
     <div class="container-sqare">
         <div id="sqare">
@@ -212,7 +210,7 @@
                 </div>
                 <p for="avatar">| <span>Avatar</span> |</p>
                 <label id="avatar-label" for="avatar" onmousedown="downup('avatar-label','black','white')" onmouseup="downup('avatar-label','white','black')">
-                    Chọn ảnh
+                    <p>Chọn ảnh</p>
                     <input type="file" name="avatar" id="avatar" accept="image/*" onchange="avatarfo()" title="Chọn ảnh đại diện">
                     <span>Khuyến nghị: Nên dùng hình ảnh 150px X 150px</span>
                 </label>
