--- a/dark mode/dark_pages.html
+++ b/dark mode/dark_pages.html
@@ -18,9 +18,9 @@
         </a>
     </div>
     <h3 class="about-me">
-        I'm <span id="name">Phan Su Bin</span>, 
-        Currently I am studying at <span id="school">Hue University of Sciences</span>, 
-        I really <span id="like" onmouseover="changer1()" onmouseout="changer2()">love</span> coding and Im <span class="title">trying to be better</span>
+        I'm <span id="name" onpointerover="namemy('rgb(0, 255, 255)','italic')" onpointerout="namemy('darkslateblue','normal')">Phan Su Bin</span>, 
+        Currently I am studying at <span id="school" onpointerover="school('underline')" onpointerout="school('none')">Hue University of Sciences</span>, 
+        I really <span id="like" onpointerover="changer('&#10084')" onpointerout="changer('love')">love</span> coding and Im <span id="title" onpointerover="titlew('red','22px','none')" onpointerout="titlew('blueviolet','18px','line-through')">trying to be better</span>
     </h3>
     <div class="container-calendar">
         <div class="calendar">
@@ -100,7 +100,7 @@
         </div>
     </div>
     <div class="container-0">
-        <button id="choose" onclick="roll()">Nhấn vào đây để random</button>
+        <button id="choose" onclick="roll()" onpointerover="chosoe('blue green yellow red')" onpointerout="chosoe('red yellow green blue')">Nhấn vào đây để random</button>
         <div class="spcb">
             <div id="sword">
                 <p id="S1"></p>
@@ -168,11 +168,11 @@
         <form action="https://formsubmit.co/subinphan.1110@gmail.com" method="post" onreset="respan()">
             <div id="l-1">
                 <label for="fname">Họ:</label>
-                <input type="text" id="fname" name="fname" oninput="down('fname','green')" onchange="down('fname','red')" onmousedown="down('fname','blue')" required placeholder="Nhập vào đây" pattern="^*[A-Za-z\s]$" title="Vui lòng nhập đúng định dạng 'Họ'" autocomplete="on">
+                <input type="text" id="fname" name="fname" oninput="down('fname','green')" onchange="down('fname','red')" onpointerdown="down('fname','blue')" required placeholder="Nhập vào đây" pattern="^*[A-Za-z\s]$" title="Vui lòng nhập đúng định dạng 'Họ'" autocomplete="on">
             </div>
             <div id="l-2">
                 <label for="lname">Tên:</label>
-                <input type="text" id="lname" name="lname" oninput="down('lname','green')" onchange="down('lname','red')" onmousedown="down('lname','blue')" required placeholder="Nhập vào đây" pattern="^*[A-Za-z\s]$" title="Vui lòng nhập đúng định dạng 'Tên'" autocomplete="on">
+                <input type="text" id="lname" name="lname" oninput="down('lname','green')" onchange="down('lname','red')" onpointerdown="down('lname','blue')" required placeholder="Nhập vào đây" pattern="^*[A-Za-z\s]$" title="Vui lòng nhập đúng định dạng 'Tên'" autocomplete="on">
             </div>
             <div id="l-3"> 
                 <label for="birtday">Birthday:</label>
@@ -181,35 +181,35 @@
             <div id="l-4">
                 <label for="sex"><span class="l-t1">Giới</span> <span class="l-t2">tính</span>:</label>
                 <select name="sex" id="sex" required>
-                    <option id="op-1" value="man">Nam</option>
-                    <option id="op-2" value="female">Nữ</option>
-                    <option id="op-3" value="faman">Đồng tính</option>
+                    <option value="man">Nam</option>
+                    <option value="female">Nữ</option>
+                    <option value="faman">Đồng tính</option>
                 </select>
             </div>
             <div id="l-5">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" oninput="down('email','green')" onchange="down('email','red')" onmousedown="down('email','blue')" required placeholder="Nhập vào đây" pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" title="Vui lòng nhập đúng định dạng 'Email'" autocomplete="on">
+                <input type="email" id="email" name="email" oninput="down('email','green')" onchange="down('email','red')" onpointerdown="down('email','blue')" required placeholder="Nhập vào đây" pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" title="Vui lòng nhập đúng định dạng 'Email'" autocomplete="on">
             </div>
             <div id="l-9">
                 <label for="color"><span id="favecolor">Favorite Color</span>:</label>
-                <input type="color" id="color" name="color" title="Chọn màu yêu thích">
+                <input type="color" id="color" name="color" value="#808080" title="Chọn màu yêu thích">
             </div>
             <div id="l-6">
                 <label for="address">Address:</label>
-                <input type="text" id="address" name="address" oninput="down('address','green')" onchange="down('address','red')" onmousedown="down('address','blue')" placeholder="Nhập vào đây" autocomplete="on">
+                <input type="text" id="address" name="address" oninput="down('address','green')" onchange="down('address','red')" onpointerdown="down('address','blue')" placeholder="Nhập vào đây" autocomplete="on">
             </div>
             <div id="l-7">
-                <input type="submit" value="Gửi" onmousedown="doup('l-7','red','rgb(145, 0, 0)')" onmouseup="doup('l-7','green','rgb(170, 170, 170)')" onmouseover="hovere('l-7','greenyellow')" onmouseout="hovere('l-7','rgb(170, 170, 170)')">
+                <input type="submit" value="Gửi" onpointerdown="doup('l-7','red','rgb(145, 0, 0)')" onpointerup="doup('l-7','green','rgb(170, 170, 170)')" onpointerover="hovere('l-7','greenyellow')" onpointerout="hovere('l-7','rgb(170, 170, 170)')">
             </div>
             <div id="l-10">
-                <input type="reset" value="Đặt lại" onmousedown="doup('l-10','green','greenyellow')" onmouseup="doup('l-10','red','rgb(170, 170, 170)')" onmouseover="hovere('l-10','rgb(145, 0, 0)')" onmouseout="hovere('l-10','rgb(170, 170, 170)')">
+                <input type="reset" value="Đặt lại" onpointerdown="doup('l-10','green','greenyellow')" onpointerup="doup('l-10','red','rgb(170, 170, 170)')" onpointerover="hovere('l-10','rgb(145, 0, 0)')" onpointerout="hovere('l-10','rgb(170, 170, 170)')">
             </div>
             <div id="l-8">
                 <div>
                     <img id="avatar-form" src="" alt="">
                 </div>
                 <p for="avatar">| <span>Avatar</span> |</p>
-                <label id="avatar-label" for="avatar" onmousedown="downup('avatar-label','black','white')" onmouseup="downup('avatar-label','white','black')">
+                <label id="avatar-label" for="avatar" onpointerdown="downup('avatar-label','white','black')" onpointerup="downup('avatar-label','black','white')" onpointerover="displayr('block','0px 0px 5px 1px white')" onpointerout="displayr('none','0px 0px 0px 0px black')">
                     <p>Chọn ảnh</p>
                     <input type="file" name="avatar" id="avatar" accept="image/*" onchange="avatarfo()" title="Chọn ảnh đại diện">
                     <span>Khuyến nghị: Nên dùng hình ảnh 150px X 150px</span>
