update video for pages

--- a/dark mode/dark_pages.html
+++ b/dark mode/dark_pages.html
@@ -64,7 +64,7 @@
     </div>
     <div class="video-limitid">
         <video id="video-content" poster="/images/TO BE HERO X.avif" controls>
-            <source src="/video/To Be Hero X.mp4" type="video/mp4">
+            <source src="" type="video/mp4">
         </video>
         <p id="title-video">"<span>TO BE HERO X</span>" Preview | Source: <a id="bilibili" href="https://www.youtube.com/@MadeByBilibili" target="_blank">Bilibili</a> x <a id="aniplex" href="https://www.youtube.com/@aniplex" target="_blank">Aniplex</a></p>
     </div>
