update content for pages

--- a/dark mode/dark_pages.html
+++ b/dark mode/dark_pages.html
@@ -71,10 +71,10 @@
         </div>
         <div class="video-container-2">
             <video id="video-content-2" poster="/images/Black Clover Movie.jpg" controls>
-                <source src="/video/Black Clover-Sword of the Wizard King.mp4" type="video/mp4">
+                <source src="/video/Black Clover Movie-Sword of the Wizard King.mp4" type="video/mp4">
             </video>
             <div>
-                <p id="title-video-2-1">" Black Clover: <span id="sr-1">Sword</span> of <span id="sr-2">Wizard King</span> "</p>
+                <p id="title-video-2-1">" Black Clover " - Movie: <span id="sr-1">Sword</span> of <span id="sr-2">Wizard King</span></p>
                 <p id="title-video-2-2">Source: <a href="https://www.youtube.com/@netflixanime">Netflix Anime</a></p>
             </div>
         </div>
